# BraTSAM

./: .gitignore  .rsyncignore  Makefile  README.md  dataset.py  engine.py  main.py  model.py  pyproject.toml  test.py  train.py
data/: preprocess_slices.py
nnunet/: evaluate_nnunet.py  preprocess_data.py  setup_env.sh
preprocessing/: __init__.py  formats.py  normalize.py  volume.py
tests/: __init__.py  test_batch.py  test_canvas.py  test_confidence_indicator.py  test_dependencies.py  test_inference.py  test_preprocessing.py  test_project_structure.py  test_review_queue.py  test_session.py  test_shortcuts.py  test_streamlit_app.py  test_upload_component.py  test_viewer.py  test_volume_upload.py
webapp/: __init__.py  app.py
webapp/components/: __init__.py  canvas.py  confidence_indicator.py  review_queue.py  slice_selector.py  upload.py  viewer.py
webapp/utils/: __init__.py  batch.py  inference.py  session.py  shortcuts.py
yolo/: predict_yolo_bboxes.py  prepare_yolo_data.py  train_yolo.py
