[project]
name = "bratsam"
version = "0.1.0"
description = "Enhancing SAM for Brain Tumor Segmentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "monai>=1.5.1",
    "nibabel>=5.3.2",
    "nnunetv2>=2.6.2",
    "numpy>=2.3.3",
    "peft>=0.17.1",
    "pillow>=11.0.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.40.0",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit-shortcuts>=0.1.0",
    "synapseclient>=4.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.1",
    "ultralytics>=8.3.223",
    "wandb>=0.22.3",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external resources)",
    "slow: marks tests as slow (may take >1 second)",
]
